<resources>
    <string name="app_name">Smart Pot</string>

    <!--Login Screen-->
    <string name="login_screen_title">SMART POT</string>
    <string name="login_username_title"><b>Tên đăng nhập</b></string>
    <string name="login_password_title"><b>Mật khẩu</b> </string>
    <string name="login_button_login_title">ĐĂNG NHẬP</string>
    <string name="login_button_forgot_title">Quên mật khẩu?</string>

    <!--Register Screen-->
    <string name="register_screen_title">TẠO TÀI KHOẢN</string>
    <string name="register_username_title">Tên đăng nhập</string>
    <string name="register_email_title"><b>Email</b></string>
    <string name="register_phone_title">Số điện thoại</string>
    <string name="register_password_title">Mật khẩu</string>
    <string name="register_password_confirm_title">Xác nhận mật khẩu</string>
    <string name="register_button_submit_title">ĐĂNG KÍ</string>

    <!--Forgot password Screen-->
    <string name="forgot_pass_screen_title">LẤY LẠI MẬT KHẨU</string>
    <string name="forgot_pass_label">Nhập email để lấy lại mật khẩu</string>
    <string name="forgot_pass_email_tv">Email</string>
    <string name="forgot_pass_button_submit_title">GỬI</string>
    <string name="forgot_pass_note"><b>Bạn hãy kiểm tra email để nhận lại mật khẩu mới.\nNếu chưa nhận được email xin vui lòng nhấn gửi lại.</b></string>

    <!--Change password Screen-->
    <string name="change_pass_screen_title">ĐỐI MẬT KHẨU</string>
    <string name="change_pass_old_pass_title">Mật khẩu cũ</string>
    <string name="change_pass_new_pass_title">Mật khẩu mới</string>
    <string name="change_pass_confirm_pass_title">Xác nhận mật khẩu mới</string>
    <string name="change_pass_button_submit_title">ĐỔI MẬT KHẨU</string>

    <!--Change password Success Screen-->
    <string name="change_pass_success_title">Đổi mật khẩu thành công</string>

    <!--Add tree Screen-->
    <string name="add_tree_screen_title">Thêm cây</string>
    <string name="add_tree_tree_name_title">Tên cây</string>
    <string name="add_tree_moisture_title">Độ ẩm an toàn (0 &#8211; 100)</string>
    <string name="add_tree_device_title">Chọn loại thiết bị</string>
    <string name="add_tree_button_submit_title">TẠO</string>

    <!--Update tree Screen-->
    <string name="update_tree_change_user_title">Đổi người sở hữu</string>
    <string name="update_tree_change_user_input_title">Nhập tên tài khoản</string>
    <string name="update_tree_screen_title">Update</string>
    <string name="update_tree_button_update_title">Cập nhật</string>
    <string name="update_tree_button_turnoff_title">Tắt theo dõi</string>

    <!--Detail tree Screen-->
    <string name="detail_safe_moisture_upper">Độ ẩm an toàn trên: </string>
    <string name="detail_safe_moisture_lower">Độ ẩm an toàn dưới: </string>
    <string name="detail_current_moisture">Độ ẩm hiện tại: </string>

    <string name="detail_safe_light_upper">Mức sáng an toàn trên: </string>
    <string name="detail_safe_light_lower">Mức sáng an toàn dưới: </string>
    <string name="detail_current_light">Mức sáng hiện tại: </string>

    <string name="detail_safe_temp_upper">Nhiệt độ an toàn trên: </string>
    <string name="detail_safe_temp_lower">Nhiệt độ an toàn dưới: </string>
    <string name="detail_current_temp">Nhiệt độ hiện tại: </string>

    <string name="detail_device_state">Tình trạng thiết bị: </string>
    <string name="detail_update_btn_title">Chỉnh sửa</string>


    <!--Store Screen-->
    <string name="store_screen_title">Kho thiết bị</string>
    <string name="store_smart_title">Chậu cây thông minh</string>
    <string name="store_auto_title">Thiết bị tự động</string>
    <string name="store_active_state">Đang hoạt động</string>
    <string name="store_inactive_state">Không hoạt động</string>

    <!--Common texts-->
    <string name="search_text_hint">:ic_search_gray: Nhập tên cây</string>

    <!--Dialog texts-->
    <string name="dialog_update_inform_text">Hệ thống sẽ tạm thời tắt thiết bị theo dõi.\n
                                            Bạn có thể kích hoạt lại bất cứ lúc nào.</string>
    <string name="dialog_button_confirm_title">Xác nhận</string>
    <string name="no_result">Không có kết quả</string>
    <string name="update_text">Cập nhật</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, </string>

    <!--Device dropdown-->
    <string-array name="device_dropdown_items">
        <item>Chậu cây thông minh</item>
        <item>Thiết bị tự tưới</item>
    </string-array>

    <!--Navigation drawer item-->
    <string name="nav_item_add_tree">Thêm cây</string>
    <string name="nav_item_growing_tips">Bí quyết chăm sóc cây</string>
    <string name="nav_item_device_storage">Kho thiết bị của bạn</string>
    <string name="nav_item_history">Lịch sử cảnh báo</string>
    <string name="nav_item_about">Giới thiệu sản phẩm</string>
    <string name="nav_item_change_password">Đổi mật khẩu</string>
    <string name="nav_item_log_out">Đăng xuất</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="missing_value">Thiếu thông tin!</string>

    <!--Status-->
    <string name="status_working_en">working</string>
    <string name="status_not_used_en">not-used</string>
    <string name="invalid_user_string">Người dùng không hợp lệ!</string>
    <string name="title_activity_detail_tree_tab">DetailTreeTabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
