
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/colorMainBackground">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/change_pass_screen_title"
            android:textSize="@dimen/font_30"
            android:textColor="@color/white_100"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_50"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            fontPath="fonts/FallingSkyBd.otf"
            android:id="@+id/textView5" />

        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/change_pass_old_pass_title"
            android:textColorHint="@color/white_100"
            android:textSize="@dimen/font_20"
            android:textColor="@color/white_100"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/margin_60"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginLeft="@dimen/margin_10"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="@dimen/margin_10"
            app:layout_constraintRight_toRightOf="parent"
            fontPath="fonts/FallingSkyBd.otf"/>

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/change_pass_new_pass_title"
            android:textColorHint="@color/white_100"
            android:textSize="@dimen/font_20"
            android:textColor="@color/white_100"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/margin_20"
            app:layout_constraintTop_toBottomOf="@+id/et_old_password"
            android:layout_marginLeft="@dimen/margin_10"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="@dimen/margin_10"
            app:layout_constraintRight_toRightOf="parent"
            fontPath="fonts/FallingSkyBd.otf"/>

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/change_pass_confirm_pass_title"
            android:textColorHint="@color/white_100"
            android:textSize="@dimen/font_20"
            android:textColor="@color/white_100"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/margin_20"
            app:layout_constraintTop_toBottomOf="@+id/et_new_password"
            android:layout_marginLeft="@dimen/margin_10"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="@dimen/margin_10"
            app:layout_constraintRight_toRightOf="parent"
            fontPath="fonts/FallingSkyBd.otf"/>

        <TextView
            android:id="@+id/tv_change_pass_btn"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/change_pass_button_submit_title"
            android:textColor="@color/white_100"
            android:textSize="@dimen/font_20"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_30"
            app:layout_constraintTop_toBottomOf="@+id/et_confirm_password"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            fontPath="fonts/FallingSkyBd.otf"/>

    </android.support.constraint.ConstraintLayout>

