<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detail_safe_temp_upper"
        android:textColor="@color/white_100"
        android:textStyle="bold"
        android:textSize="@dimen/font_14"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/margin_08"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/textView9"
        fontPath="fonts/FallingSkyBd.otf"/>

    <TextView
        android:id="@+id/tv_safe_temp_upper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/font_14"
        android:textColor="@color/white_100"
        app:layout_constraintLeft_toRightOf="@+id/textView9"
        android:layout_marginLeft="@dimen/margin_08"
        android:paddingLeft="@dimen/margin_08"
        android:paddingRight="@dimen/margin_08"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        fontPath="fonts/FallingSkyBd.otf"
        android:layout_marginTop="0dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detail_safe_temp_lower"
        android:textColor="@color/white_100"
        android:textStyle="bold"
        android:textSize="@dimen/font_14"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:layout_marginLeft="@dimen/margin_08"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/textView13"
        fontPath="fonts/FallingSkyBd.otf"/>

    <TextView
        android:id="@+id/tv_safe_temp_lower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/font_14"
        android:textColor="@color/white_100"
        app:layout_constraintLeft_toRightOf="@+id/textView13"
        android:layout_marginLeft="@dimen/margin_08"
        android:paddingLeft="@dimen/margin_08"
        android:paddingRight="@dimen/margin_08"
        fontPath="fonts/FallingSkyBd.otf"
        app:layout_constraintTop_toTopOf="@+id/textView13" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detail_current_temp"
        android:textStyle="bold"
        android:textColor="@color/white_100"
        android:textSize="@dimen/font_14"
        android:layout_marginLeft="@dimen/margin_08"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        android:id="@+id/textView10"
        fontPath="fonts/FallingSkyBd.otf"/>

    <TextView
        android:id="@+id/tv_current_temp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/font_14"
        android:textColor="@color/white_100"
        app:layout_constraintLeft_toRightOf="@+id/textView10"
        android:layout_marginLeft="@dimen/margin_08"
        android:paddingLeft="@dimen/margin_08"
        android:paddingRight="@dimen/margin_08"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        fontPath="fonts/FallingSkyBd.otf"
        android:layout_marginTop="0dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detail_device_state"
        android:textSize="@dimen/font_14"
        android:textStyle="bold"
        android:textColor="@color/white_100"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        android:id="@+id/textView11"
        fontPath="fonts/FallingSkyBd.otf"/>


    <TextView
        android:id="@+id/tv_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white_100"
        android:textSize="@dimen/font_14"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        android:paddingLeft="@dimen/margin_08"
        android:paddingRight="@dimen/margin_08"
        fontPath="fonts/FallingSkyBd.otf"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/textView11"
        android:layout_marginLeft="8dp" />

    <com.github.mikephil.charting.charts.LineChart
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/lineChartTemp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/rounded_border_btn">

    </com.github.mikephil.charting.charts.LineChart>

    <!--<TextView-->
    <!--android:id="@+id/tv_edit_tree"-->
    <!--android:layout_width="180dp"-->
    <!--android:layout_height="50dp"-->
    <!--android:text="@string/detail_update_btn_title"-->
    <!--android:textColor="@color/white_100"-->
    <!--android:textSize="@dimen/font_14"-->
    <!--android:textStyle="bold"-->
    <!--android:gravity="center"-->
    <!--android:layout_marginLeft="8dp"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--android:layout_marginRight="8dp"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--fontPath="fonts/FallingSkyBd.otf"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--android:layout_marginBottom="@dimen/margin_14" />-->

</android.support.constraint.ConstraintLayout>
